apps/portfolio/src/app/testimonies/testimonies.component.scss
.testimonial-section {
  padding-top: 1%;
  // padding-right: 10%;
  padding-bottom: 1%;
  padding-left: 10%;
  // margin-top: 100px;
  // background: -webkit-gradient(linear, left top, right top, from(#effaff), to(#d9e7ff));
  //     background: #FFAFBD;  /* fallback for old browsers */
  // background: -webkit-linear-gradient(to right, #ffc3a0, #FFAFBD);  /* Chrome 10-25, Safari 5.1-6 */
  // background: linear-gradient(to right, #ffc3a0, #FFAFBD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  //     background: #9796f0;  /* fallback for old browsers */
  // background: -webkit-linear-gradient(to right, #fbc7d4, #9796f0);  /* Chrome 10-25, Safari 5.1-6 */
  // background: linear-gradient(to right, #fbc7d4, #9796f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}
.timKing-img {
  background-image: url('https://media-exp1.licdn.com/dms/image/C4D03AQFL3pM_d1LwPw/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=gO1mNe0OH-D4WvjZSFsC7K2odOdJeLwspj027NXF1Ek');
  background-size: cover;
}
.justin-img {
  background-image: url('https://media-exp1.licdn.com/dms/image/C5603AQEjUj94UWR07g/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=ytYb8ad6B45tmy5Im1i_Fh0V6aEJDlnHcm30C-OgBGI');
  background-size: cover;
}

.jyothi-img {
  background-image: url('https://media-exp1.licdn.com/dms/image/C4E03AQGeg7xc94G5Lg/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=utf4iFKcUtjoCqNH30VyPbuqcjpvkHuVjTXjEO7-dzA');
  background-size: cover;
}
.yasaswy-img {
  background-image: url('https://media-exp1.licdn.com/dms/image/C5103AQGcCrKRjLWQQg/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=IMoXkKMjg02eAk5SP75lPj_bfhOx6QBi2AEPph-EL70');
  background-size: cover;
}
.kristen-img {
  background-image: url('https://media-exp1.licdn.com/dms/image/C4E03AQE9GsQJK30m5w/profile-displayphoto-shrink_400_400/0?e=1602115200&v=beta&t=U7qVwUZYWZ64gOvj5qqlNmiZUMM2U7tlUxH8dPwD_xM');
  background-size: cover;
}

.mat-card-1 {
  //   width: 80%;
  margin-right: 1%;
  // margin-bottom: 50px;
  background: inherit;
  //   background-color:#f1f1f1 ;
  // background-color: rgba(230,233,236,.56);
  box-shadow: none;
  border-radius: 0px;
  padding: 0px;

  //   float: left;
}
.testimonial-mat-card-main {
  // background: inherit;
  // position: relative;
  display: grid;
  // padding: 3%;
  box-shadow: none;
  background: inherit;
  // background-image: url('../../assets//testimonial-bg.svg');
}
.testimonial-title {
  font-family: cursive;
  // letter-spacing: 1px;
  line-height: normal;
  font-size: 2.5rem;
  font-weight: 500;
  text-align: center;
  margin-bottom: 0px;
}
.mat-card-content-style {
  //   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12) !important;
}
.p-text {
  // font-style: italic;
  line-height: 1.5rem;
  letter-spacing: 1px;
  padding: 1rem;
  font-size: 1rem;
  background: white;
  border-radius: 10px;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12) !important;
  font-family: 'Times New Roman', Times, serif;
}
.left-side {
  // margin-left: 20%;
}

// .viewMoreButtonDiv{
//     margin: auto;
// }
.viewMoreButton {
  // width: 100%;

  padding: 0.5rem;
  border-radius: 3px;
  font-size: 1rem;
  transition: background 0.5s ease;
}

.arrow1 {
  margin-left: 10px;
  color: #673ab7;
  font-size: 30px;
  animation: slide1 1s ease-in-out infinite;
  margin-left: 9px;
}
@keyframes slide1 {
  0%,
  100% {
    transform: translate(0, 0);
  }

  50% {
    transform: translate(10px, 0);
  }
}

.p-note {
  color: coral;
  font-size: 0.6rem;
  text-align: center;
  margin: 0px;
}

